--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>btcmp.io</title>
+    <title>Andrew Cull</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
